<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/activity_bg"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="商家管理平台"
        android:gravity="center"
        android:textSize="@dimen/ui_36_px"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/account_edit_pannel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@+id/account_edit_pannel"
        android:layout_alignRight="@+id/account_edit_pannel"
        android:background="@drawable/gear_selector_primary"
        android:textColor="@color/gear_white"
        android:textSize="@dimen/ui_34_px"
        android:text="@string/account_label_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        />

    <TextView
        style="@style/text_caption_normal"
        android:id="@+id/contract_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="联系客服"
        android:padding="4dp"
        android:layout_below="@+id/login_btn"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_marginTop="17dp"
        />
    <TextView
        style="@style/text_caption_normal"
        android:id="@+id/banbenhao_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="app版本号："
        android:padding="4dp"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        />


    <TextView
        style="@style/text_caption_normal"
        android:id="@+id/apply_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="申请为商家"
        android:padding="4dp"
        android:visibility="gone"
        android:layout_below="@+id/login_btn"
        android:layout_alignRight="@+id/login_btn"
        android:layout_marginTop="17dp"
        />

    <TableLayout
        android:id="@+id/account_edit_pannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/title_tv"
        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_label_account"
                android:textSize="@dimen/ui_34_px"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />

            <EditText
                android:id="@+id/account_et"
                style="@style/edit_normal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/account_label_account_hint"/>
        </TableRow>

        <View style="@style/line_view_vertical"
            android:layout_marginTop="10dp"
            />

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_label_password"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />

            <EditText
                android:id="@+id/password_et"
                style="@style/edit_normal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/account_label_password_hint"/>
        </TableRow>
        <View style="@style/line_view_vertical"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/remember_password_ck"
                style="@style/text_caption_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/ui_30_px"
                android:layout_weight="1"
                android:text="记住密码"
                android:layout_marginLeft="10dp"
                />

            <TextView
                style="@style/text_caption_normal"
                android:id="@+id/forget_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/account_label_forget"
                android:background="@drawable/gear_tab_bg"
                android:gravity="center"
                android:layout_marginRight="20dp"
                />

        </LinearLayout>
    </TableLayout>

</RelativeLayout>